# AVS_Homework5

exam/: CMakeLists.txt  Student.cpp  Student.h  Teacher.cpp  Teacher.h  TicketsDeck.cpp  TicketsDeck.h  main.cpp  output.txt
